Correction z-index select profil

--- a/css/styles.css
+++ b/css/styles.css
@@ -479,7 +479,7 @@ header .glyphicon{
 #menuProfil{
   position: absolute;
   padding:0px;
-  z-index: 9999;
+  z-index: 10;
   top:80px;
   right:7px;
   opacity:0;
